[package]
name = "zgdatestharness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
tokio = { version = "1.35.1", features = ["full", "sync"] }
futures = "0.3.30"
prost = "0.12.3"
tonic = { version = "0.10.2", features = ["gzip", "tls", "tls-roots", "tls-roots-common", "tls-webpki-roots"] }
tonic-build = "0.10.2"
prometheus = "0.13.3"
prometheus_exporter = "0.8.5"
clap = { version = "4.4.18", default-features = false, features = ["std", "derive", "help", "usage", "env"] }
governor = "0.6.0"
nonzero_ext = "0.3.0"

[build-dependencies]
tonic-build = "0.10.2"
anyhow = "1.0.79"

[dev-dependencies]
borsh =  { version = "1.3.1" }
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
ed25519-dalek = "2.1.0"
